# enterprise-knowledge-hub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: docker.yml
content/: README.md
deployments/argocd/: dev-application.yaml  local-application.yaml  prod-application.yaml
deployments/argocd/dev/: ekh-application.yaml
deployments/argocd/prod/: ekh-application.yaml
deployments/charts/ekh/: Chart.yaml  values.yaml
deployments/ekh/: Chart.yaml  values-dev.yaml  values-local.yaml  values.yaml
deployments/ekh/templates/: _helpers.tpl  deployment.yaml  secrets.yaml
docs/: database.md
provider/database/: base.py  pgvector.py  pgvector_db.py
provider/embedding/: base.py  chunk_text.py  embeddingUtil.py  embedding_util.py  llama_cpp.py  llama_cpp_backend.py  torch.py  torch_backend.py
provider/embedding/qwen3/: embedder_factory.py  llama.py  (+2 more)
provider/queue/: base.py  rabbitmq.py
repository/: postgrespg.py
router/database_interaction/: endpoints.py
router/frontend/: frontend.py  index.html
router/knowledge/: endpoints.py  run_state.py
router/root/: run_management_endpoints.py  search_retrieve_endpoints.py
services/database/: database_service.py
services/db/: model.py  postgrespg.py
services/embedding/: embedding_service.py  embedding_util.py
services/knowledge/: base.py  batch_handler.py  models.py  query.py  shutdown_service.py  wikipedia.py
services/queue/: queue_handler.py  queue_service.py  queue_worker.py
services/stats/: knowledge_service_stats.py
(+3 files in other folders)
