[project]
name = "enterprise-knowledge-hub"
version = "0.1.0"
description = "Enterprise Knowledge hub to index the documents from various sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi[standard]>=0.124.4",
    "pika>=1.3.2",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
]
